POS Application - Sprint 3